--- a/src/Landing.module.scss
+++ b/src/Landing.module.scss
@@ -256,6 +256,6 @@ img {
 
   .push-up {
     position: relative;
-    top: -100px;
+    top: -50px;
   }
 }
